--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
     }
 
     .btn-primary {
-        @apply py-1 px-2 bg-gray-800 rounded-md text-gray-300
+        @apply py-1 px-5 bg-gray-800 rounded-md text-gray-300
     }
 
     .btn-primary:hover {
@@ -59,5 +59,9 @@
 
     .auth-btn:hover {
         @apply text-white rounded-sm bg-gray-900
+    }
+
+    .attention {
+        @apply bg-gray-100 p-1 border-l-4 border-gray-400 text-gray-600 mx-1 w-full
     }
 }
